Findbugs Bx
git-svn-id: https://svn.jfire.org/svn/main/trunk/org.nightlabs.base.ui@15856 18c61ebf-f106-0410-9e1e-81fb82415b8f